--- a/hands-on_exercises/21_flexbox-practicum-02/05_featured-list/index.html
+++ b/hands-on_exercises/21_flexbox-practicum-02/05_featured-list/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" media="(max-width: 700px)" href="mq_700-less.css">
-  <title>Document</title>
+  <title>MyFeature List</title>
 </head>
 
 <body>
