--- a/hands-on_exercises/23_Hero-Challenge/02_challenge_center-text/index.html
+++ b/hands-on_exercises/23_Hero-Challenge/02_challenge_center-text/index.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="main.css">
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
   <title>Lord Vader</title>
 </head>
 
 <body>
-  <div class="atf"></div>
+  <div class="atf"><h1 class="title">Lord Vader</h1></div>
 
 </body>
 
