--- a/hands-on_exercises/29_Fresno-Radon/Fresno-Radon-Mitigation/index.html
+++ b/hands-on_exercises/29_Fresno-Radon/Fresno-Radon-Mitigation/index.html
@@ -7,13 +7,13 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="main.css">
 	<link rel="stylesheet" media="(max-width: 500px)" href="mq_500-less.css">
-	<link rel="stylesheet" media="(min-width: 501px)" and "(max-width: 799px)" href="mq_501-799.css">
-	<!-- <link rel="stylesheet" media="(min-device-width : 375px)
+	<link rel="stylesheet" media="(min-width: 501px) and (max-width: 799px)" href="mq_501-799.css">
+	 <!-- <link rel="stylesheet" media="(min-device-width : 375px)
 and (max-device-width : 667px)" href="mq_500-less.css">
 	<link rel="stylesheet" media="(min-device-width : 768px)
 	and (max-device-width : 1024px)
-	and (orientation : landscape)" href="mq_501-799.css">
-	<link rel="stylesheet" media="(min-width: 800px)" href="main.css"> -->
+	and (orientation : landscape)" href="mq_501-799.css"> -->
+	<link rel="stylesheet" media="(min-width: 800px)" href="main.css">
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|EB+Garamond|Josefin+Sans|Lato:300,400" rel="stylesheet">
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<title>Fresno Radon Mitigation</title>
