--- a/hands-on_exercises/29_Fresno-Radon/Fresno-Radon-Mitigation/index.html
+++ b/hands-on_exercises/29_Fresno-Radon/Fresno-Radon-Mitigation/index.html
@@ -96,7 +96,7 @@ and (max-device-width : 667px)" href="mq_500-less.css">
 
 		<div class="container"><a href="https://squareup.com/store/fresnoradon" target="_blank" class="test" class="resource">TEST YOUR HOME TODAY</a></div>
 
-		<a class="resource" href="http://www.epa.gov/radon/pubs/citguide.html">source:www.epa.gov</a>
+		<a class="resource" target="_blank" href="http://www.epa.gov/radon/pubs/citguide.html">source:www.epa.gov</a>
 		<div class="longline"></div>
 	</article>
 
@@ -271,7 +271,7 @@ and (max-device-width : 667px)" href="mq_500-less.css">
 
 		<div class="container"><a href="https://squareup.com/store/fresnoradon" target="_blank" class="test" class="resource">TEST YOUR HOME TODAY</a></div>
 
-		<a class="resource" href="http://www.epa.gov/radon/pubs/citguide.html">source:www.epa.gov</a>
+		<a class="resource" target="_blank" href="http://www.epa.gov/radon/pubs/citguide.html">source:www.epa.gov</a>
 		<div class="longline"></div>
 
 	</article>
