--- a/hands-on_exercises/30_teaching-website/index.html
+++ b/hands-on_exercises/30_teaching-website/index.html
@@ -44,9 +44,9 @@
                 </h1>
             </div>
         </section>
-        <section class="info">
+        <footer class="info">
             <p id="slug" class="info">
-              "GreaterCommons lets you collect, share, and discover class<br>materials. GreaterCommons will help you find great teaching materials including videos,<br>articles, pictures, handouts, presentations and more."
+                "GreaterCommons lets you collect, share, and discover class<br>materials. GreaterCommons will help you find great teaching materials including videos,<br>articles, pictures, handouts, presentations and more."
             </p>
             <a href="" class="button">MAKE MY CLASSES GREAT</a>
             <nav class="info">
@@ -54,7 +54,7 @@
                 <a id="become" href="#" class="info">become</a>
                 <a id="find" href="#" class="info">find</a>
             </nav>
-        </section>
+        </footer>
     </main>
 
     <script>
@@ -75,34 +75,36 @@
             x.innerHTML = "";
             x.style.maxWidth = "900px";
             x.innerHTML = "" +
-            "\"Create a collection of resources. PowerPoint presentations, handouts, " +
-            "links to online resources such as videos, articles, and useful websites - GreaterCommons " +
-            "lets you easily collect, organize, and share course materials.\"";
+                "\"Create a collection of resources. PowerPoint presentations, handouts, " +
+                "links to online resources such as videos, articles, and useful websites - GreaterCommons " +
+                "lets you easily collect, organize, and share course materials.\"";
         }
+
         function mouseOver1() {
             x.innerHTML = "";
             x.style.maxWidth = "1100px";
             x.innerHTML = "" +
-            "\"Become a center of influence. Allow others to discover your resources " +
-            "then copy them into their collections. You will be able to see how many " +
-            "classes and students have benefited from your resources - you will be influencing " +
-            "the quality of classes around the world.\"";
+                "\"Become a center of influence. Allow others to discover your resources " +
+                "then copy them into their collections. You will be able to see how many " +
+                "classes and students have benefited from your resources - you will be influencing " +
+                "the quality of classes around the world.\"";
         }
+
         function mouseOver2() {
             x.innerHTML = "";
             x.style.maxWidth = "1100px";
             x.innerHTML = "" +
-            "\"Find great resources. GreaterCommons is a central repository of course resources. " +
-            "Find the resources that have been used the most, and rated the highest, then " +
-            "copy those resources into your collection and use them in your classes.\"";
+                "\"Find great resources. GreaterCommons is a central repository of course resources. " +
+                "Find the resources that have been used the most, and rated the highest, then " +
+                "copy those resources into your collection and use them in your classes.\"";
         }
 
         function mouseOut() {
             x.innerHTML = "";
-            x.style.maxWidth= "800px";
+            x.style.maxWidth = "800px";
             x.innerHTML = "\"GreaterCommons lets you " +
-            "collect, share, and discover class materials. GreaterCommons will help you find great " +
-            "teaching materials including videos, articles, pictures, handouts, presentations and more.\"";
+                "collect, share, and discover class materials. GreaterCommons will help you find great " +
+                "teaching materials including videos, articles, pictures, handouts, presentations and more.\"";
         }
     </script>
 
