--- a/hands-on_exercises/30_teaching-website/index.html
+++ b/hands-on_exercises/30_teaching-website/index.html
@@ -38,15 +38,14 @@
             </div>
         </header>
         <section class="intro">
-            <div class="intro">
-                <h1 class="intro">Great Classes
-                  <br> Start Here
+            <a href="#" class="intro">
+                <h1 class="intro">Great Classes<br>Start Here
                 </h1>
-            </div>
+            </a>
         </section>
         <footer class="info">
             <p id="slug" class="info">
-                "GreaterCommons lets you collect, share, and discover class<br>materials. GreaterCommons will help you find great teaching materials including videos,<br>articles, pictures, handouts, presentations and more."
+                "GreaterCommons lets you collect, share, and discover class materials.<br> GreaterCommons will help you find great teaching materials including videos,<br>articles, pictures, handouts, presentations and more."
             </p>
             <a href="" class="button">MAKE MY CLASSES GREAT</a>
             <nav class="info">
