--- a/hands-on_exercises/31_Travel-website/index.html
+++ b/hands-on_exercises/31_Travel-website/index.html
@@ -35,30 +35,7 @@
 </section>
 
 <section class="photos">
-  <img src="photos/0.jpg" alt="beach image" srcset="photos/0.jpg 600w photos-m/0-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/2.jpg" alt="beach image" srcset="photos/2.jpg 600w photos-m/2-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/3.jpg" alt="beach image" srcset="photos/3.jpg 600w photos-m/3-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/4.jpg" alt="beach image" srcset="photos/4.jpg 600w photos-m/4-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/5.jpg" alt="beach image" srcset="photos/5.jpg 600w photos-m/5-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/6.jpg" alt="beach image" srcset="photos/6.jpg 600w photos-m/6-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/7.jpg" alt="beach image" srcset="photos/7.jpg 600w photos-m/7-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/8.jpg" alt="beach image" srcset="photos/8.jpg 600w photos-m/8-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/10.jpg" alt="beach image" srcset="photos/10.jpg 600w photos-m/10-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/11.jpg" alt="beach image" srcset="photos/11.jpg 600w photos-m/11-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/12.jpg" alt="beach image" srcset="photos/12.jpg 600w photos-m/12-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/13.jpg" alt="beach image" srcset="photos/13.jpg 600w, photos-m/13-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/14.jpg" alt="beach image" srcset="photos/14.jpg 600w, photos-m/14-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/15.jpg" alt="beach image" srcset="photos/15.jpg 600w, photos-m/15-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/16.jpg" alt="beach image" srcset="photos/16.jpg 600w, photos-m/16-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/17.jpg" alt="beach image" srcset="photos/17.jpg 600w, photos-m/17-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/18.jpg" alt="beach image" srcset="photos/18.jpg 600w, photos-m/18-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/19.jpg" alt="beach image" srcset="photos/19.jpg 600w, photos-m/19-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/20.jpg" alt="beach image" srcset="photos/20.jpg 600w, photos-m/20-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/21.jpg" alt="beach image" srcset="photos/21.jpg 600w, photos-m/21-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/22.jpg" alt="beach image" srcset="photos/22.jpg 600w, photos-m/22-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/23.jpg" alt="beach image" srcset="photos/23.jpg 600w, photos-m/23-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <img src="photos/24.jpg" alt="beach image" srcset="photos/24.jpg 600w, photos-m/24-374.jpg 300w" sizes="(max-width: 450px) 374px, 100vw">
-  <!-- <img src="photos/0.jpg" alt="beach image">
+  <img src="photos/0.jpg" alt="beach image">
   <img src="photos/2.jpg" alt="beach image">
   <img src="photos/3.jpg" alt="beach image">
   <img src="photos/4.jpg" alt="beach image">
@@ -80,7 +57,33 @@
   <img src="photos/21.jpg" alt="beach image">
   <img src="photos/22.jpg" alt="beach image">
   <img src="photos/23.jpg" alt="beach image">
-  <img src="photos/24.jpg" alt="beach image"> -->
+  <img src="photos/24.jpg" alt="beach image">
+</section>
+
+<section class="photos-mobile">
+  <img src="photos-m/0-374.jpg" alt="beach image">
+  <img src="photos-m/2-374.jpg" alt="beach image">
+  <img src="photos-m/3-374.jpg" alt="beach image">
+  <img src="photos-m/4-374.jpg" alt="beach image">
+  <img src="photos-m/5-374.jpg" alt="beach image">
+  <img src="photos-m/6-374.jpg" alt="beach image">
+  <img src="photos-m/7-374.jpg" alt="beach image">
+  <img src="photos-m/8-374.jpg" alt="beach image">
+  <img src="photos-m/10-374.jpg" alt="beach image">
+  <img src="photos-m/11-374.jpg" alt="beach image">
+  <img src="photos-m/12-374.jpg" alt="beach image">
+  <img src="photos-m/13-374.jpg" alt="beach image">
+  <img src="photos-m/14-374.jpg" alt="beach image">
+  <img src="photos-m/15-374.jpg" alt="beach image">
+  <img src="photos-m/16-374.jpg" alt="beach image">
+  <img src="photos-m/17-374.jpg" alt="beach image">
+  <img src="photos-m/18-374.jpg" alt="beach image">
+  <img src="photos-m/19-374.jpg" alt="beach image">
+  <img src="photos-m/20-374.jpg" alt="beach image">
+  <img src="photos-m/21-374.jpg" alt="beach image">
+  <img src="photos-m/22-374.jpg" alt="beach image">
+  <img src="photos-m/23-374.jpg" alt="beach image">
+  <img src="photos-m/24-374.jpg" alt="beach image">
 </section>
 
 <section class="story">
